Linter updates